Add like functionality

--- a/public/new_post.html
+++ b/public/new_post.html
@@ -30,7 +30,7 @@
             <h2>New Post</h2>
             <form id="newPostForm" action="/submitPost" method="POST">
                 <label for="postContent">Content:</label>
-                <textarea id="postContent" name="postContent" rows="4" cols="50"></textarea>
+                <textarea id="postContent" name="content" rows="4" cols="50"></textarea>
                 <div id="controls">
                     <button id="submitPostButton" type="submit">Submit</button>
                     <button id="cancelButton" type="button">Cancel</button>
