--- a/public/detailed_blog.html
+++ b/public/detailed_blog.html
@@ -41,8 +41,8 @@
             <h2>Friends List</h2>
             <!-- Dynamically loaded friends will go here -->
             <ul>
-                <li>Friend 1</li>
-                <li>Friend 2</li>
+                <li>Friend 1 -- Online</li>
+                <li>Friend 2 -- Offline</li>
             </ul>
         </section>
     </main>
