--- a/public/new_post.html
+++ b/public/new_post.html
@@ -42,8 +42,8 @@
             <h2>Friends List</h2>
             <!-- Dynamically loaded friends will go here -->
             <ul>
-                <li>Friend 1</li>
-                <li>Friend 2</li>
+                <li>Friend 1 -- Online</li>
+                <li>Friend 2 -- Offline</li>
             </ul>
         </section>
     </main>
